# api-bakery

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
src/{{ cookiecutter.project_slug }}/: main.py  routes.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  pyproject.toml
