[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "{{ cookiecutter.license }}"
packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
